--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0"
