--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-input-mask": "^2.0.4",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "remask": "^0.1.0-alpha.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
