--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-google-maps/api": "^2.13.1",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
