--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "bootstrap": "^5.2.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^8.0.2",
